force-app/main/default/objects/Configuration__c/Configuration__c.object-meta.xml
<CustomObject>
    <description>The Salesforce equivalent of the Visual Configuration Plan</description>
    <label>Configuration Plan</label>
    <nameField>
        <label>Configuration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>