force-app/main/default/objects/Configuration__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment</label>
    <referenceTo>Apartment__c</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>ConfigurationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>