force-app/main/default/objects/Configuration__c/fields/ApartmentUnit__c.field-meta.xml
<CustomField>
    <fullName>ApartmentUnit__c</fullName>
    <description>Reference to the Apartment/Unit Number where this Configuration is planned</description>
    <inlineHelpText>Reference to the Apartment/Unit Number where this Configuration is planned</inlineHelpText>
    <label>Plan Apartment/Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>