force-app/main/default/objects/Configuration__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Main Project this Configuration belongs to</description>
    <label>Plan Building Project</label>
    <referenceTo>Building_Project__c</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configuration_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>