force-app/main/default/objects/Configuration__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>ConfigurationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>