force-app/main/default/objects/Configuration__c/fields/Condiminium__c.field-meta.xml
<CustomField>
    <fullName>Condiminium__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Apartment</description>
    <label>Condiminium</label>
    <referenceTo>Condominium__c</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>ConfigurationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>