force-app/main/default/objects/Configuration__c/fields/Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Config_JSON__c</fullName>
    <description>(Hidden) Field to Store the Config JSON</description>
    <label>Config JSON OLD</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>