force-app/main/default/objects/Configuration__c/fields/Configuration_Line__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Line__c</fullName>
    <label>Configuration Line OLD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>