force-app/main/default/objects/Configuration__c/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <label>Configuration Name OLD</label>
    <length>200</length>
    <type>Text</type>
</CustomField>