force-app/main/default/objects/Configuration__c/fields/ConfigurationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationIdentifier__c</fullName>
    <description>Reference to the Identifier used by the Configurators</description>
    <externalId>true</externalId>
    <inlineHelpText>Reference to the Identifier used by the Configurators</inlineHelpText>
    <label>Plan Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>