force-app/main/default/objects/Configuration__c/fields/ConfigurationNumber__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationNumber__c</fullName>
    <description>The Unique Identifier for the Configuration plan
Street+Name+Floor+Line+Unit</description>
    <externalId>true</externalId>
    <inlineHelpText>The Unique Identifier for the Configuration plan</inlineHelpText>
    <label>Configuration Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>