force-app/main/default/objects/Configuration__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contract to which this Configuration belongs.
Set when Quote is Accepted and Contract Signed</description>
    <inlineHelpText>Reference to the Contract to which this Configuration belongs</inlineHelpText>
    <label>Plan Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>