force-app/main/default/objects/Configuration__c/fields/Count_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Products__c</fullName>
    <label>Count Products</label>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>