force-app/main/default/objects/Configuration__c/fields/CountConfigurationProducts__c.field-meta.xml
<CustomField>
    <fullName>CountConfigurationProducts__c</fullName>
    <label>Count Configuration Products</label>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>