force-app/main/default/objects/Configuration__c/fields/Delivery_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Batch_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the Number of the Delivery Batch</description>
    <inlineHelpText>Indicates the Number of the Delivery Batch</inlineHelpText>
    <label>Delivery Batch Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>