force-app/main/default/objects/Configuration__c/fields/DeliveryBatch__c.field-meta.xml
<CustomField>
    <fullName>DeliveryBatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Delivery Batch this Configuration plan is produced/delivered/Installed in</description>
    <label>Plan Delivery Batch</label>
    <referenceTo>Delivery_Batch__c</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configuration_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>