force-app/main/default/objects/Configuration__c/fields/DeliveryBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryBatchNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the Number of the Delivery Batch</description>
    <inlineHelpText>Indicates the Number of the Delivery Batch</inlineHelpText>
    <label>Plan Delivery Batch Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>