force-app/main/default/objects/Configuration__c/fields/DeliveryProject__c.field-meta.xml
<CustomField>
    <fullName>DeliveryProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Delivery Sub Project this Configuration belongs to</description>
    <inlineHelpText>The Delivery Sub Project this Configuration belongs to</inlineHelpText>
    <label>Delivery Project</label>
    <referenceTo>Delivery_Project__c</referenceTo>
    <relationshipLabel>Configuration Plans (Delivery Project)</relationshipLabel>
    <relationshipName>Configuration_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>