force-app/main/default/objects/Configuration__c/fields/EstimatedInstallationHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedInstallationHours__c</fullName>
    <description>Sum of the Installation Hours of each Configuration Product (RVN) in this Configuration Plan
applies to Configurations created in Salesforce</description>
    <inlineHelpText>Sum of the Installation Hours of each Configuration Product (RVN) in this Configuration Plan</inlineHelpText>
    <label>Estimated Installation Hours</label>
    <summarizedField>Configuration_Product__c.Installation_Hours__c</summarizedField>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>