force-app/main/default/objects/Configuration__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Reference to the Apartment/Unit Floor Number where this Configuration is planned</description>
    <inlineHelpText>Reference to the Apartment/Unit Floor Number where this Configuration is planned</inlineHelpText>
    <label>Plan Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>