force-app/main/default/objects/Configuration__c/fields/hasInstallation__c.field-meta.xml
<CustomField>
    <fullName>hasInstallation__c</fullName>
    <label>hasInstallation</label>
    <summarizedField>Configuration_Product__c.hasInstallation__c</summarizedField>
    <summaryFilterItems>
        <field>Configuration_Product__c.hasInstallation__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>