force-app/main/default/objects/Configuration__c/fields/hasInstallationTime__c.field-meta.xml
<CustomField>
    <fullName>hasInstallationTime__c</fullName>
    <formula>IF(EstimatedInstallationHours__c &gt;0,True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasInstallationTime</label>
    <type>Checkbox</type>
</CustomField>