force-app/main/default/objects/Configuration__c/fields/hasProductionTime__c.field-meta.xml
<CustomField>
    <fullName>hasProductionTime__c</fullName>
    <formula>IF(Production_Time_Max__c &gt;0,True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasProductionTime</label>
    <type>Checkbox</type>
</CustomField>