force-app/main/default/objects/Configuration__c/fields/Installation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Installation_Duration__c</fullName>
    <description>The Installation Time in Hours for a Balcony</description>
    <formula>((1*0.5)+2)*8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Installation Time in Hours</inlineHelpText>
    <label>Installation Duration OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>