force-app/main/default/objects/Configuration__c/fields/Installation_Time__c.field-meta.xml
<CustomField>
    <fullName>Installation_Time__c</fullName>
    <description>Installation Time in Hours</description>
    <inlineHelpText>Installation Time in Hours</inlineHelpText>
    <label>Installation Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>