force-app/main/default/objects/Configuration__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <label>Line</label>
    <length>10</length>
    <type>Text</type>
</CustomField>