force-app/main/default/objects/Configuration__c/fields/Lock_RVN__c.field-meta.xml
<CustomField>
    <fullName>Lock_RVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lock RVN value TRUE or FALSE decides whether Visual can override or create structure number for the Plan</description>
    <label>Lock RVN OLD</label>
    <type>Checkbox</type>
</CustomField>