force-app/main/default/objects/Configuration__c/fields/LockPlan__c.field-meta.xml
<CustomField>
    <fullName>LockPlan__c</fullName>
    <description>Lock the configuration if the opportunity is Contract Signed. Once plan is locked no changes to the configuration</description>
    <formula>IF( 
OR(
ISPICKVAL(Opportunity__r.StageName,&apos;Closed Won&apos;),
ISPICKVAL(Opportunity__r.StageName,&apos;Closed Lost&apos;)
)
, TRUE, FALSE)</formula>
    <label>LockPlan</label>
    <type>Checkbox</type>
</CustomField>