force-app/main/default/objects/Configuration__c/fields/NumberOfProducts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfProducts__c</fullName>
    <label>Number of Products</label>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>