force-app/main/default/objects/Configuration__c/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <label>Offer Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>