force-app/main/default/objects/Configuration__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Shows the Oportunity Number related to the Configuration Plan</description>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <inlineHelpText>The Oportunity Number related to the Configuration Plan</inlineHelpText>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>