force-app/main/default/objects/Configuration__c/fields/Opportunity_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Pricebook__c</fullName>
    <formula>Opportunity__r.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Pricebook</label>
    <type>Text</type>
</CustomField>