force-app/main/default/objects/Configuration__c/fields/Opportunity_Project__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Project__c</fullName>
    <formula>Opportunity__r.Project_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Project</label>
    <type>Text</type>
</CustomField>