force-app/main/default/objects/Configuration__c/fields/OriginalConfigurationPlan__c.field-meta.xml
<CustomField>
    <fullName>OriginalConfigurationPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates to Configuration from which the current plan is cloned as part of reclamation</description>
    <label>Original Configuration Plan</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Original Configuration Plans</relationshipLabel>
    <relationshipName>OriginalConfigurationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>