force-app/main/default/objects/Configuration__c/fields/Parent_Configuration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Configuration_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates to Configuration from which the current plan is cloned as part of reclamation</description>
    <label>Parent Configuration Plan</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configuration_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>