force-app/main/default/objects/Configuration__c/fields/Plan_Floor__c.field-meta.xml
<CustomField>
    <fullName>Plan_Floor__c</fullName>
    <label>Floor OLD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>