force-app/main/default/objects/Configuration__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Type of Plan ,eg Visual, Blinds, Services</description>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Plan_Types</valueSetName>
    </valueSet>
</CustomField>