force-app/main/default/objects/Configuration__c/fields/PlanName__c.field-meta.xml
<CustomField>
    <fullName>PlanName__c</fullName>
    <description>The Name of the Configuration planned</description>
    <inlineHelpText>The Name of the Configuration planned</inlineHelpText>
    <label>Plan Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>