force-app/main/default/objects/Configuration__c/fields/PlannedInstallationHours__c.field-meta.xml
<CustomField>
    <fullName>PlannedInstallationHours__c</fullName>
    <description>Planned Installation Time in Hours
used when Plan is prepared in Salestori</description>
    <inlineHelpText>Planned Installation Time in Hours</inlineHelpText>
    <label>Planned InstallationHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>