force-app/main/default/objects/Configuration__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the related Pricebook</description>
    <label>Price Book OLD</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>