force-app/main/default/objects/Configuration__c/fields/Pricing_JSON__c.field-meta.xml
<CustomField>
    <fullName>Pricing_JSON__c</fullName>
    <description>(Hidden) Field to Store the Pricing JSON</description>
    <label>Pricing JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>