force-app/main/default/objects/Configuration__c/fields/Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Time__c</fullName>
    <label>Production Time OLD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>