force-app/main/default/objects/Configuration__c/fields/Production_Time_Max__c.field-meta.xml
<CustomField>
    <fullName>Production_Time_Max__c</fullName>
    <description>Max Value of the Production Days of related Configuration Products</description>
    <label>Production Time Max OLD</label>
    <summarizedField>Configuration_Product__c.Production_Time__c</summarizedField>
    <summaryForeignKey>Configuration_Product__c.Configuration__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>