force-app/main/default/objects/Configuration__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project OLD</label>
    <referenceTo>Delivery_Project__c</referenceTo>
    <relationshipLabel>Configuration Plans (Project)</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>