force-app/main/default/objects/Configuration__c/fields/RVN_Number__c.field-meta.xml
<CustomField>
    <fullName>RVN_Number__c</fullName>
    <description>RVN Number unique value related to each Visual configuration</description>
    <formula>Opportunity__r.Opportunity_Number__c +  Visual_Structure_Number__c</formula>
    <label>RVN Number</label>
    <type>Text</type>
</CustomField>