force-app/main/default/objects/Configuration__c/fields/SalesToriConfigKey__c.field-meta.xml
<CustomField>
    <fullName>SalesToriConfigKey__c</fullName>
    <description>This it used to make the configuration plan unique by combining the delivery batch id, unit, floor, line</description>
    <externalId>true</externalId>
    <label>SalesToriConfigKey</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>