force-app/main/default/objects/Configuration__c/fields/Sovelia_Id__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Id__c</fullName>
    <description>Unique Configuration Id from Sovelia</description>
    <externalId>true</externalId>
    <label>Sovelia Id OLD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>