force-app/main/default/objects/Configuration__c/fields/Sovelia_Pricing_JSON__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Pricing_JSON__c</fullName>
    <label>Sovelia Pricing JSON</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>