force-app/main/default/objects/Configuration__c/fields/Sovelia_Products_JSON__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Products_JSON__c</fullName>
    <label>Sovelia Products JSON OLD</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>