force-app/main/default/objects/Configuration__c/fields/Sovelia_Statistics__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Statistics__c</fullName>
    <label>Sovelia Statistics XML</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>