force-app/main/default/objects/Configuration__c/fields/Sovelia_Structure_Number__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Structure_Number__c</fullName>
    <description>&quot;structure_number&quot; from Sovelia Output</description>
    <externalId>true</externalId>
    <label>Sovelia Structure Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>