force-app/main/default/objects/Configuration__c/fields/Sovelia_Version__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Version__c</fullName>
    <description>1 for Old Sovelia
2 for New Sovelia</description>
    <label>Sovelia Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>