force-app/main/default/objects/Configuration__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>IMAGE(&apos;/img/msg_icons/error32.png&apos;,&apos;ERROR&apos;,20,20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>