force-app/main/default/objects/Configuration__c/fields/Visual_Id__c.field-meta.xml
<CustomField>
    <fullName>Visual_Id__c</fullName>
    <description>Unique Configuration Id from Visual</description>
    <externalId>true</externalId>
    <label>Visual Id OLD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>