force-app/main/default/objects/Configuration__c/fields/Visual_Pricing_JSON__c.field-meta.xml
<CustomField>
    <fullName>Visual_Pricing_JSON__c</fullName>
    <label>Visual Pricing JSON OLD</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>