force-app/main/default/objects/Configuration__c/fields/Visual_Statistics__c.field-meta.xml
<CustomField>
    <fullName>Visual_Statistics__c</fullName>
    <label>Visual Statistics XML</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>