force-app/main/default/objects/Configuration__c/fields/Visual_Structure_Number__c.field-meta.xml
<CustomField>
    <fullName>Visual_Structure_Number__c</fullName>
    <description>&quot;structure_number&quot; from Visual Output</description>
    <externalId>true</externalId>
    <label>Visual Structure Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>