force-app/main/default/objects/Configuration__c/fields/Visual_Version__c.field-meta.xml
<CustomField>
    <fullName>Visual_Version__c</fullName>
    <description>1 for Old Visual
2 for New Visual</description>
    <label>Visual Version OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>