force-app/main/default/objects/Configuration__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order OLD</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Configuration Plans</relationshipLabel>
    <relationshipName>Configuration_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>