force-app/main/default/objects/Configuration__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Order Configuration Plans</relationshipLabel>
    <relationshipName>WorkOrderConfigurationPlans</relationshipName>
    <type>Lookup</type>
</CustomField>