force-app/main/default/objects/Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Configuration_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Visual_Structure_Number__c</columns>
    <columns>Visual_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>